Ajustando etapa de geração do relatório

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Gerar o relatório Allure
       - name: Generate Allure Report
-        run: allure generate allure-results --clean
+        run: npx allure generate allure-results --clean
 
       # Copiar arquivos de histórico e remover antigos
       - name: Copy Allure History
