Ajustando forma de copiar pastas

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Generate Allure Report
         run: |
           npx allure generate allure-results --clean
-          cp -r allure-report/* allure-report/.* /home/runner/work/test-allure-ci-cd/test-allure-ci-cd/allure-report/
+          cp -r allure-report/* /home/runner/work/test-allure-ci-cd/test-allure-ci-cd/allure-report/
 
       # Copiar arquivos de histórico e remover antigos
       - name: Copy Allure History
