Ajustando forma de copiar pastas 3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,10 @@ jobs:
           npx allure generate allure-results --clean
           # Criar um diretório temporário
           mkdir -p temp-allure-report
-          # Copiar os arquivos gerados para o diretório temporário
-          cp -r allure-report/* temp-allure-report/
-          # Mover o conteúdo do diretório temporário para o destino correto
-          mv temp-allure-report/* /home/runner/work/test-allure-ci-cd/test-allure-ci-cd/allure-report/
+          # Usar rsync para mover o conteúdo evitando copiar o diretório dentro de si mesmo
+          rsync -av --progress allure-report/ temp-allure-report/
+          # Mover os arquivos para o diretório final
+          rsync -av --progress temp-allure-report/ /home/runner/work/test-allure-ci-cd/test-allure-ci-cd/allure-report/
           # Remover o diretório temporário
           rm -rf temp-allure-report
 
