Ajustando etapa de copiar os arquivos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,7 @@ jobs:
 
       # Copiar arquivos de histórico e remover antigos
       - name: Copy Allure History
-        run: |
-          rm -rf allure-results/history
-          cp -r allure-report/history allure-results/
+        run: cp -r allure-report/history allure-results/
 
       # Atualizar o cache de histórico do Allure
       - name: Cache Allure History
