Teste forçando a criação do branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,10 @@ jobs:
           allure_history: allure-history
           allure_results: build/allure-results
 
+      - name: Ensure gh-pages branch exists
+        run: |
+          git fetch origin gh-pages || git checkout --orphan gh-pages
+
       - name: Publish test report
         uses: peaceiris/actions-gh-pages@v3
         if: always()
