Alterando forma de download dos arquivos

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,11 @@ jobs:
       # Baixar histórico do GitHub Pages
       - name: Download Allure History from GitHub Pages
         run: |
-          wget -q --show-progress https://tiagotaq.github.io/test-allure-ci-cd/history/history.zip -O history.zip
-          unzip history.zip -d allure-results/history/
+          wget -q --show-progress https://tiagotaq.github.io/test-allure-ci-cd/history/categories-trend.json -O allure-results/history/categories-trend.json
+          wget -q --show-progress https://tiagotaq.github.io/test-allure-ci-cd/history/duration-trend.json -O allure-results/history/duration-trend.json
+          wget -q --show-progress https://tiagotaq.github.io/test-allure-ci-cd/history/history-trend.json -O allure-results/history/history-trend.json
+          wget -q --show-progress https://tiagotaq.github.io/test-allure-ci-cd/history/history.json -O allure-results/history/history.json
+          wget -q --show-progress https://tiagotaq.github.io/test-allure-ci-cd/history/retry-trend.json -O allure-results/history/retry-trend.json
         continue-on-error: true
 
       # Executar os testes com Cypress
