--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@shelex/cypress-allure-plugin": "^2.40.2",
     "allure-commandline": "^2.30.0",
-    "cypress": "^12.10.0"
+    "allure-cypress": "^3.0.5",
+    "cypress": "^13.15.0"
   }
 }
